# rsmpeg-test

./: Cargo.toml  build-window.bat
.cargo/: config.toml
src/: main.rs
